<package>
  <name>rocon_gateway_graph</name>
  <version>0.10.0</version>
  <description>
    An rqt plugin that displays the gateway graph across multiple ros masters from
    the perspective of the master executing the plugin.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rocon_gateway_graph</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_qt_gui</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_qt_gui/issues</url>
  <author>Daniel Stonier</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>python_qt_binding</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rocon_gateway</run_depend>
  <run_depend>rocon_gateway_utils</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/gateway_plugin.xml"/>
  </export>
</package>
