##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(rocon_qt_listener)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED)
catkin_package()

#catkin_python_setup()

##############################################################################
# Installs
##############################################################################

install(
    PROGRAMS 
        qt_listener.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

